--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
 
+    <section id="first-sec">
+
   <!-- the navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
@@ -27,7 +29,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"><span>About Us</span><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#bout"><span>About Us</span><span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item active">
@@ -47,7 +49,8 @@
 
 
   <!-- top button -->
-  <a href="#" class="btn">Shop Now</a>
+  <a href="#" target="_blank" class="btn">Shop Now</a>
+
   <!-- Top button ends-->
 </nav>
 
@@ -55,7 +58,7 @@
   <div class="row">
     <div class="col-sm">
       <h5>Add emotions and feelings to your space with unique piece of ART</h5>
-      <p>I create a amazing art that tell stories and bring great feeling to your space. I tell stories in a way that communicate wuth no language</p>
+      <p>I create an amazing art that tell stories and bring great feeling to your space. I tell stories in a way that communicate with no language</p>
 
       <a href="#" class="btn-bn">Shop Now</a>
     </div>
@@ -65,6 +68,28 @@
     </div>
   </div>
 </div>
+</section>
+
+<!-- The about section-->
+
+<h2 class="aboutt" id="bout">ABOUT</h2>
+<section id="About-section">
+  <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <img src="img/bt.jpg">
+    </div>
+
+    <div class="col-sm">
+      <p>A non-fungible token (NFT) is a financial security consisting of digital data stored in a blockchain, a form of distributed ledger. The ownership of an NFT is recorded in the blockchain, and can be transferred by the owner, allowing NFTs to be sold and traded. NFTs can be created by anybody, and require few or no coding skills to create.[1] NFTs typically contain references to digital files such as photos, videos, and audio. Because NFTs are uniquely identifiable, they differ from cryptocurrencies, which are fungible. The market value of an NFT is associated with the digital file it references.
+
+Proponents of NFTs claim that NFTs provide a public certificate of authenticity or proof of ownership, but the legal rights conveyed by an NFT can be uncertain. The ownership of an NFT as defined by the blockchain has no inherent legal meaning, and does not necessarily grant copyright, intellectual property rights, or other legal rights over its associated digital file. An NFT does not restrict the sharing or copying of its associated digital file, and does not prevent the creation of NFTs that reference identical files.
+
+The NFT market grew dramatically from 2020–2021: the trading of NFTs in 2021 increased to more than $17 billion, up by 21,000% over 2020's total of $82 million.[2] NFTs have been used as speculative investments, and they have drawn increasing criticism for the energy cost and carbon footprint associated with validating blockchain transactions as well as their frequent use in art scams.[3] The NFT market has also been compared to an economic bubble or a Ponzi scheme.[4]</p>
+    </div>
+  </div>
+</div>
+</section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
